--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/topzerzar/setup_webpace_v2/issues"
   },
-  "homepage": "https://github.com/topzerzar/setup_webpace_v2#readme"
+  "homepage": "https://github.com/topzerzar/setup_webpace_v2#readme",
+  "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0"
+  }
 }
