--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "setup webpack for deploy node server",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,11 @@
   "homepage": "https://github.com/topzerzar/setup_webpace_v2#readme",
   "devDependencies": {
     "babel-core": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0"
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "webpack": "^2.3.0"
+  },
+  "dependencies": {
+    "express": "^4.15.2"
   }
 }
