--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "webpack": "^2.3.0"
   },
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
